	  unnecessary chat window to open.
	* Support setting an animated GIF as a buddy icon.

	XMPP:
	* Added support for the SCRAM-SHA-1 SASL mechanism.  This is only
	  available when built without Cyrus SASL support.
	* When getting info on a domain-only (server) JID, show uptime
	  (when given by the result of the "last query") and don't show status as
	  offline.

version 2.6.5 (01/08/2010):
	libpurple:
	* TLS certificates are actually stored to the local cache once again
	  (accepting a name mismatch on a certificate should now be remembered)

	General:
	* Build-time fixes for Solaris.  (Paul Townsend)

	AIM and ICQ:
	* Messages from some mobile clients are no longer displayed as
	  Chinese characters (broken in 2.6.4)

	MSN:
	* Fix an issue allowing a remote user to download arbitrary files from
	  a libpurple client.  (CVE-2010-0013)

	XMPP:
	* Do not crash when attempting to register for a new account on Windows.
	* Fix file transfer with clients that do not support Entity Capabilities
	  (e.g. Spark)

version 2.6.4 (11/29/2009):
	libpurple:
	* Actually emit the hold signal for media calls.
	* Fix building the GnuTLS plugin with older versions of GnuTLS.
	* Fix DNS TXT query resolution.
	* Don't send Proxy-Authorization headers to HTTP proxy servers until we've
	  received a "407 Proxy Authentication Required" response from the server.
	  (thecrux)
	* Added "MXit" protocol plugin, supported and maintained by the MXit folks
	  themselves (MXit Lifestyle (Pty) Ltd.)

	General:
	* New 'plugins' sub-command to 'debug' command (i.e. '/debug plugins')
	  to announce the list of loaded plugins (in both Finch and Pidgin).
	* Always rejoin open chats after an account reconnects.

	AIM and ICQ:
	* Better rate limit calculations and other improvements.  (Aman Gupta)
	* More detailed error messages when messages fail to send.  (Aman Gupta)
	* The simultaneous login account option is respected when using
	  the clientLogin authentication method.